# ferris-elf

./: .gitignore  README.md  bot.py  fetch.py  fetchloop.sh  flags.txt  frequency.sh  pyproject.toml  requirements.txt  rustcfeatures.txt  stats.py
ferris_elf/: __init__.py  database.py  fetch.py
runner/: Cargo.toml  Dockerfile  build.rs  nvidia_icd.json  profile.sh
runner/src/: main.rs  placeholder.rs
solutions/: Cargo.toml
solutions/src/: main.rs
